<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:layout_gravity="center_horizontal" android:columnCount="12"
              android:orientation="horizontal" android:id="@+id/main_panel">


    <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_rushes_layout"

    >

        <robin.stopmotion.SquashedPreview
                android:layout_width="fill_parent"
                android:layout_height="480dp" android:id="@+id/view"

                android:layout_above="@+id/linearLayout"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/splaybackandskinset"
                android:layout_alignParentBottom="true" android:layout_alignParentLeft="true">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelDeleteAll"
                android:id="@+id/deleteCurrent"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelDeleteCurrent"
                android:id="@+id/deleteAll"
                />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_set_skins"
                    android:id="@+id/setSkins"
            />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_encode"
                    android:id="@+id/encode"
            />
             <SeekBar
            android:layout_width="wrap_content"
                 android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/playbackSpeed" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_playback"
                android:id="@+id/play"
                />
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_above="@+id/splaybackandskinset" android:layout_alignParentLeft="true">


            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/frameLeft"
                android:text="@string/leftArrow" />

            <SeekBar
                android:id="@+id/previewSeekBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/frameRight"
                android:text="@string/rightArrow" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>

